--- a/code-crush-saga/src/styles.css
+++ b/code-crush-saga/src/styles.css
@@ -1,23 +1,68 @@
+
 body {
   font-family: sans-serif;
 }
 
+input {
+  width: 70px;
+}
+
 .cube-row {
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .cube {
   width: 30px;
   height: 30px;
   border: 1px solid #ccc;
+  margin: 1px;
 }
+
+.cube:hover {
+  opacity: 0.6;
+}
+
+.cube[selected=true] {
+  outline: 1px solid black;
+}
+
 
 .red {
   background-color: red;
 }
 
+.black {
+  background-color: black;
+}
+
+.cyan {
+  background-color: cyan;
+}
+
+.orangered {
+  background-color: orangered;
+}
+
+.lime {
+  background-color: lime;
+}
+
+.magenta {
+  background-color: magenta;
+}
+
 .purple {
   background: purple;
+}
+
+.coral {
+  background: coral;
+}
+
+.white {
+  background: white;
 }
 
 .green {
