--- a/snu-chat/src/App.css
+++ b/snu-chat/src/App.css
@@ -15,3 +15,32 @@ li.chat {
   text-align: left;
   padding-left: 40px;
 }
+
+input[type='submit'] {
+  margin-left: 3px;
+}
+
+html {
+  height: 97%;
+}
+
+div#chatRoom, body, div#root, div.App {
+  height: 100%;
+}
+
+form {
+  vertical-align: baseline;
+}
+
+textarea {
+  margin-top: 0.2vh;
+  width: 90%;
+  height: 7vh;
+  resize: none;
+}
+
+button.send {
+  margin-top: -7vh;
+  margin-left: 0.2em;
+  height: 7vh;
+}
